iptables/iptables
# Generated by iptables-save v1.4.7 on Wed Dec 30 00:06:01 2015
*nat
:PREROUTING ACCEPT [331:21170]
:POSTROUTING ACCEPT [1:40]
:OUTPUT ACCEPT [1:40]
# 192.168.9.185/186
# # UDP
-A PREROUTING -p udp -d 172.19.222.16/32 --dport 8088 -j DNAT --to-destination 192.100.9.186:8088
-A PREROUTING -p udp -d 172.19.222.16/32 --dport 9088 -j DNAT --to-destination 192.100.9.185:9088
# # TCP
-A PREROUTING -p tcp -d 172.19.222.16/32 --dport 8088 -j DNAT --to-destination 192.100.9.186:8088
-A PREROUTING -p tcp -d 172.19.222.16/32 --dport 9088 -j DNAT --to-destination 192.100.9.185:9088
# 192.100.9.165
-A PREROUTING -p tcp -d 172.19.222.16/32 --dport 80 -j DNAT --to-destination 192.100.9.165:80
# 192.100.13.203
-A PREROUTING -p tcp -d 172.19.222.16/32 --dport 3389 -j DNAT --to-destination 192.100.13.203:3389
# OUTPUT chain allow localhost testing
-A OUTPUT -p tcp -d 172.19.222.16/32 --dport 3389 -j DNAT --to-destination 192.100.13.203:3389
-A POSTROUTING -d 192.100.9.165 -j MASQUERADE
-A POSTROUTING -d 192.100.9.185 -j MASQUERADE
-A POSTROUTING -d 192.100.9.186 -j MASQUERADE
-A POSTROUTING -d 192.100.13.203 -j MASQUERADE
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [885:108724]
:INPUT - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m limit --limit 1/sec --limit-burst 10 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp -j DROP
-A INPUT -p udp -m udp -j DROP
COMMIT
# Completed on Wed Dec 30 00:06:01 2015
